# Kissan360-Web_Innovators_Hackathon

./: README.md
backend/: BACKEND.md  LEGACY.md  api-docs.md  frontend-models.md  package-lock.json  package.json  server.js
backend/controllers/: appointmentController.js  authController.js  blogRecommendationsController.js  commentController.js  cropController.js  expertDetailsController.js  farmerDetailsController.js  farmerPreferenceController.js  farmingNewsController.js  getExpertsController.js  irrigationController.js  marketController.js  notificationsController.js  postController.js  recommendationController.js  recordController.js  shortAdviceController.js  taskController.js  videoCallController.js  voiceAssistantController.js  weatherController.js
backend/middleware/: jwt.js  roles.js
backend/models/: appointmentModel.js  auth.model.js  comment.model.js  crop.model.js  expertDetail.model.js  farmerDetail.model.js  irrigation.model.js  marketItem.model.js  marketPrice.model.js  monthlySummary.model.js  post.model.js  record.model.js  task.model.js
frontend/: AUTH-SETUP.md  FARMER-DASHBOARD-PLAN.md  IMPLEMENTATION-COMPLETE.md  package-lock.json  package.json
voice-assistant/: README.md  pyproject.toml
voice-assistant/app/: routes.py  schemas.py
voice-assistant/app/graph/: voice_graph.py
voice-assistant/app/services/: openai_client.py
voice-assistant/scripts/: live_client.py
voice-assistant/tests/: test_graph.py  test_openai_client.py  test_openai_service.py
voice-assistant/voice_assistant.egg-info/: PKG-INFO  requires.txt
(+199 files in other folders)
