[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-assistant"
version = "0.1.0"
description = "Voice-based assistant microservice for farmers leveraging FastAPI, LangGraph, and OpenAI."
authors = [
  { name = "CUI Web Innovators" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "openai>=1.45.0,<2.0.0",
  "langgraph>=0.1.9,<0.2.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.2.0,<3.0.0",
  "python-multipart>=0.0.9,<0.1.0",
  "aiofiles>=23.2.1,<24.0.0",
  "sounddevice>=0.4.6,<0.5.0",
  "numpy>=1.26.0,<3.0.0",
  "scipy>=1.11.0,<2.0.0",
  "simpleaudio>=1.0.4,<2.0.0",
  "requests>=2.32.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<0.24.0",
  "httpx>=0.27.0,<0.28.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


